make it a view